--- a/src/site/markdown/update-auto.md.vm
+++ b/src/site/markdown/update-auto.md.vm
@@ -2,7 +2,7 @@
 
 <!--  MACRO{toc|section=0|fromDepth=2|toDepth=6} -->
 
-<h4>Anmelden als ROOT</h4>
+<h4>Anmelden als root</h4>
 Für die Ausführung ist wichtig, dass der Nutzer als `root` angemeldet ist. Sollten Sie den Nutzer `root` noch nicht aktiviert haben, so folgen Sie bitte den Anweisungen im Abschnitt [Erste Schritte](install-script.html#Erste_Schritte) des Installationsskriptes. Alle folgenden Befehle sollten nur als Nutzer `root` ausgeführt werden.
 <br></br>
 
